# airflow-study

./: .gitignore  README.md
airflow-fastapi/: Dockerfile  Makefile  README.md  deployment.yaml  docker-compose.yml  pyproject.toml  ruff.toml  service.yaml
airflow-fastapi/airflow_fastapi/: __init__.py  api.py  config.py  main.py  schemas.py
airflow-fastapi/airflow_fastapi/database/: core.py
airflow-fastapi/airflow_fastapi/item/: models.py  schemas.py  views.py
airflow-k8s/: kind-cluster.yaml
airflow/dags/prod/airflow_fastapi/: call_get_api_in_dag.py
airflow/dags/prod/celery/: call_beat_in_dag.py
airflow/dags/prod/samples/: link_test.py  print_in_dag.py  print_in_dag_schedule.py
airflow/dags/prod/testk8s/: k8s_from_sample.py  run_k8s.py  run_k8s_like_python.py
