[tool.poetry]
name = "airflow-fastapi"
version = "0.1.0"
description = ""
authors = ["권진호(Jinho Kwon)/Rider <jinho.kwon@wesang.com>"]
readme = "README.md"
packages = [{include = "airflow_fastapi"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
pymysql = "^1.0.3"
pydantic = "^1.10.9"
ruff = "^0.0.272"
click = "^8.1.3"
ipython = "^8.14.0"
sqlalchemy-utils = "^0.41.1"
sqlalchemy = "1.3"
alembic = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
