[tool.poetry]
name = "airflow-fastapi"
version = "0.1.0"
description = ""
authors = ["권진호(Jinho Kwon)/Rider <jinho.kwon@wesang.com>"]
readme = "README.md"
packages = [{include = "airflow_fastapi"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
pymysql = "^1.0.3"
pydantic = "^1.10.9"
ruff = "^0.0.272"
click = "^8.1.3"
ipython = "^8.14.0"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.11.1"
apache-airflow = "^2.6.1"
apache-airflow-providers-amazon = "7.3.0"
apache-airflow-providers-celery = "3.1.0"
apache-airflow-providers-cncf-kubernetes = "5.2.2"
apache-airflow-providers-common-sql = "1.3.4"
apache-airflow-providers-docker = "3.5.1"
apache-airflow-providers-elasticsearch = "4.4.0"
apache-airflow-providers-ftp = "3.3.1"
apache-airflow-providers-grpc = "3.1.0"
apache-airflow-providers-hashicorp = "3.3.0"
apache-airflow-providers-http = "4.2.0"
apache-airflow-providers-mysql = "4.0.2"
apache-airflow-providers-redis = "3.1.0"
pendulum = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
